--- a/BlazorBuilds.Components/Assets/Scss/_switch.scss
+++ b/BlazorBuilds.Components/Assets/Scss/_switch.scss
@@ -10,6 +10,7 @@
     outline: none;
     font: inherit;
     background-color: transparent;
+    color: inherit;
 
     &__label {
         font-size: 1rem;
